--- a/基础知识.md
+++ b/基础知识.md
@@ -119,6 +119,45 @@
   
 
 > IConfiguration解释
-- 是服务
+- IConfiguration 服务是为了从asp.net Core 中的所有各种配置源读取配置信息而设计的。
+- 如果在多个配置源中具有相同密钥名称的配置设置，简单来说就是重名了，则后面的配置源将覆盖先前的配置源 。
 
+
+> 中间件
+ - 在ASP.NET Core中，中间件(Middleware)是一个可以处理HTTP请求或响应的软件管道。
+ - ASP.NET Core中给中间件组件的定位是具有非常特定的用途。例如，我们可能有需要一个中间件组件验证用户，另一个中间件来处理错误，另一个中间件来提供静态文件，如JavaScript文件，CSS文件，图片等等。
+ - 使用这些中间件组件在ASP.NET Core中设置请求处理管道。而正式这管道决定了如何处理请求。
+ - 而请求管道是由Startup.cs文件中的Configure（）方法进行配置，它也是应用程序启动的一个重要部分。
+```
+public void Configure(IApplicationBuilder app, IHostingEnvironment env)
+{
+    if (env.IsDevelopment())
+    {
+        app.UseDeveloperExceptionPage();
+    }
+
+
+    app.Run(async (context) =>
+    {
+        await context.Response.WriteAsync("Hello World!");
+    });
+}
+```
+- 由空项目模板生成的Configure（）方法中的代码中，一个非常简单的请求处理管道中，只有两个中间件。
+  UseDeveloperExceptionPage是一个中间件，第二个中间件是使用Run（）方法设置的。
+
+> 中间组件
+- 中间件组件可以同时访问 - 传入请求和传出响应。
+- 中间件组件可以处理请求, 并决定不调用管道中的下一个中间件，从而使管道短路
+- 中间件组件可以通过传入的HTTP请求来响应HTTP请求。
+- 中间件组件还可以处理传出响应。
+- 中间件组件是按照添加到管道的顺序进行执行的
+- 中间件组件应该用NuGet包的形式提供。由NuGet处理更新，尽量将中间件拆的足够小，提供每个中间件独立更新的能力。
+- 
+
+> Use、Run 和 Map
+- 使用 Use、Run 和 Map 配置 HTTP 管道。 Use 方法可使管道短路（即不调用 next 请求委托）。 Run 是一种约定，并且某些中间件组件可公开在管道末尾运行的 Run[Middleware] 方法。
+- Map 扩展用作约定来创建管道分支。 Map* 基于给定请求路径的匹配项来创建请求管道分支。 如果请求路径以给定路径开头，则执行分支。
+- 使用 Map 时，将从 HttpRequest.Path 中删除匹配的线段，并针对每个请求将该线段追加到 HttpRequest.PathBase。Map 支持嵌套,Map 还可同时匹配多个段.
+- 
  
