--- a/领域设计步骤.md
+++ b/领域设计步骤.md
@@ -1,3 +1,5 @@
+
+> 领域驱动设计
 - 在Domain中设计类，例如要创建一个SceneResult，创建SceneResult.cs
   public ICollection<SceneResult> SceneResults{get;private set;}
   - 创建SceneResult.cs,分析需要的属性
@@ -39,8 +41,18 @@
     - 易扩展，易调试、易测试、框架解耦、易理解、
     - Domain层： 在本项目对应HiDarren.NorthwindTraders.Data类库。主要包括：Code First领域模型等。
     - Application层：在本项目对应HiDarren.NorthwindTraders.Application类库。这里涵盖了应用程序所有的业务逻辑。主要包括：和DbContext相关的一个接口INorthwindDbContext.cs,在这是只是定义了领域并没有实现，实现会放在Persistence层；AutoMapper的映射配置；分页、排序、过滤相关的配置；与CQRS模式对应的模型，相关的Dto模型；模型验证，等等。
+    
     - Persistence层。在本项目对应HiDarren.NorthwindTraders.Persistence类库。主要包括DbContext、DbContext工厂、数据库种子数据、数据库迁移等。
     - Infrastructure层。在本项目对应HiDarren.NorthwindTraders.Infrastructure类库。主要包括公共性质方面的一些处理，比如Email、文件等。
     - Presentation层。网站或者API。
+
+
+> 安装SDK和Runtime
+> SDK是什么？开发工具包
+Runtime是什么？运行.NET Core程序所需要的环境
+SDK的存放位置：C:\Program Files\dotnet\sdk
+Runtime的存放位置：C:\Program Files\dotnet\shared
+命令行查看SDK版本：dotnet --list-sdks
+命令行查看Runtime版本：dotnet --list-runtimes
   
 
