--- a/基础知识.md
+++ b/基础知识.md
@@ -161,3 +161,7 @@ public void Configure(IApplicationBuilder app, IHostingEnvironment env)
 - 使用 Map 时，将从 HttpRequest.Path 中删除匹配的线段，并针对每个请求将该线段追加到 HttpRequest.PathBase。Map 支持嵌套,Map 还可同时匹配多个段.
 - 
  
+
+
+ >.net core 配置
+ - 
