--- a/基础知识.md
+++ b/基础知识.md
@@ -163,5 +163,17 @@ public void Configure(IApplicationBuilder app, IHostingEnvironment env)
  
 
 
- >.net core 配置
- - 
+ >包含 lambda 的 UseStatusCodePages
+ - 若要指定自定义错误处理和响应写入代码，请利用需要使用 lambda 表达式的 UseStatusCodePages 重载：
+```
+   app.UseStatusCodePages(async context =>
+{
+    context.HttpContext.Response.ContentType = "text/plain";
+
+    await context.HttpContext.Response.WriteAsync(
+        "Status code page, status code: " + 
+        context.HttpContext.Response.StatusCode);
+});
+```
+
+
